[project]
name = "AstroLogics"
version = "0.3.0"
requires-python = ">3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "tslearn",
    "fastcluster",
    "tqdm",
    "maboss", 
    "boolsim", 
    "mpbn",
    "seaborn",
    "pyboolnet @ git+https://github.com/hklarner/pyboolnet#egg=3.0.16",
    "pystablemotifs @ git+https://github.com/sysbio-curie/pystablemotifs#egg=master"
]
authors = [
  {name = "Saran Pankaew", email = "saran.pankeaw@curie.fr"},
  {name = "Vincent Noël", email = "vincent.noel@curie.fr"},
]
readme = "README.md"
description = "An analysis framework for monotonous Boolean model ensemble"
license = "MIT"
