[project]
name = "AstroLogics"
version = "0.3.0"
requires-python = ">3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "tslearn",
    "fastcluster",
    "tqdm",
    "maboss", 
    "boolsim", 
    "mpbn",
    "seaborn"
]
authors = [
  {name = "Saran Pankaew", email = "saran.pankeaw@curie.fr"},
  {name = "Vincent Noël", email = "vincent.noel@curie.fr"},
]
readme = "README.md"
description = "An analysis framework for monotonous Boolean model ensemble"
license = "MIT"
